// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountTag render matches snapshot when name prop is defined 1`] = `
<View
  accessibilityRole="none"
  accessible={true}
  onLayout={[Function]}
  style={
    {
      "alignSelf": "flex-start",
      "backgroundColor": "#0376C91A",
      "borderColor": "#0376c9",
      "borderRadius": 999,
      "borderWidth": 0,
      "color": "#0376c9",
      "padding": 16,
      "paddingHorizontal": 8,
      "paddingVertical": 2,
    }
  }
  testID="tagbase"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#ffffff",
          "borderRadius": 8,
          "height": 16,
          "overflow": "hidden",
          "width": 16,
        }
      }
    >
      <View
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "backgroundColor": "#15A1F2",
              "borderRadius": 8,
              "height": 16,
              "width": 16,
            },
            undefined,
          ]
        }
      >
        <RNSVGSvgView
          bbHeight={16}
          bbWidth={16}
          focusable={false}
          height={16}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 16,
                "width": 16,
              },
            ]
          }
          width={16}
        >
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          >
            <RNSVGRect
              fill={
                {
                  "payload": 4294022146,
                  "type": 0,
                }
              }
              height={16}
              matrix={
                [
                  0.9997806834748455,
                  -0.02094241988335679,
                  0.02094241988335679,
                  0.9997806834748455,
                  -0.16522875087026775,
                  0.16904305456385807,
                ]
              }
              propList={
                [
                  "fill",
                ]
              }
              width={16}
              x={0}
              y={0}
            />
            <RNSVGRect
              fill={
                {
                  "payload": 4294732544,
                  "type": 0,
                }
              }
              height={16}
              matrix={
                [
                  0.35020738125946743,
                  0.9366721892483976,
                  -0.9366721892483976,
                  0.35020738125946743,
                  16.674578221396217,
                  2.9583003481997023,
                ]
              }
              propList={
                [
                  "fill",
                ]
              }
              width={16}
              x={0}
              y={0}
            />
            <RNSVGRect
              fill={
                {
                  "payload": 4280577505,
                  "type": 0,
                }
              }
              height={16}
              matrix={
                [
                  -0.17020949916603276,
                  -0.9854078984834901,
                  0.9854078984834901,
                  -0.17020949916603276,
                  -8.054940486540705,
                  25.3447353688826,
                ]
              }
              propList={
                [
                  "fill",
                ]
              }
              width={16}
              x={0}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
    <View
      accessible={false}
      style={
        {
          "width": 4,
        }
      }
      testID="listitem-gap"
    />
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#0376c9",
          "fontFamily": "EuclidCircularB-Regular",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 22,
        }
      }
      testID="tagbase-text"
    >
      Sample Contract
    </Text>
  </View>
</View>
`;

exports[`AccountTag render matches snapshot when name prop isn't defined 1`] = `
<View
  accessibilityRole="none"
  accessible={true}
  onLayout={[Function]}
  style={
    {
      "alignSelf": "flex-start",
      "backgroundColor": "#0376C91A",
      "borderColor": "#0376c9",
      "borderRadius": 999,
      "borderWidth": 0,
      "color": "#0376c9",
      "padding": 16,
      "paddingHorizontal": 8,
      "paddingVertical": 2,
    }
  }
  testID="tagbase"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#ffffff",
          "borderRadius": 8,
          "height": 16,
          "overflow": "hidden",
          "width": 16,
        }
      }
    >
      <View
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "backgroundColor": "#15A1F2",
              "borderRadius": 8,
              "height": 16,
              "width": 16,
            },
            undefined,
          ]
        }
      >
        <RNSVGSvgView
          bbHeight={16}
          bbWidth={16}
          focusable={false}
          height={16}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 16,
                "width": 16,
              },
            ]
          }
          width={16}
        >
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          >
            <RNSVGRect
              fill={
                {
                  "payload": 4294022146,
                  "type": 0,
                }
              }
              height={16}
              matrix={
                [
                  0.9997806834748455,
                  -0.02094241988335679,
                  0.02094241988335679,
                  0.9997806834748455,
                  -0.16522875087026775,
                  0.16904305456385807,
                ]
              }
              propList={
                [
                  "fill",
                ]
              }
              width={16}
              x={0}
              y={0}
            />
            <RNSVGRect
              fill={
                {
                  "payload": 4294732544,
                  "type": 0,
                }
              }
              height={16}
              matrix={
                [
                  0.35020738125946743,
                  0.9366721892483976,
                  -0.9366721892483976,
                  0.35020738125946743,
                  16.674578221396217,
                  2.9583003481997023,
                ]
              }
              propList={
                [
                  "fill",
                ]
              }
              width={16}
              x={0}
              y={0}
            />
            <RNSVGRect
              fill={
                {
                  "payload": 4280577505,
                  "type": 0,
                }
              }
              height={16}
              matrix={
                [
                  -0.17020949916603276,
                  -0.9854078984834901,
                  0.9854078984834901,
                  -0.17020949916603276,
                  -8.054940486540705,
                  25.3447353688826,
                ]
              }
              propList={
                [
                  "fill",
                ]
              }
              width={16}
              x={0}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
    <View
      accessible={false}
      style={
        {
          "width": 4,
        }
      }
      testID="listitem-gap"
    />
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#0376c9",
          "fontFamily": "EuclidCircularB-Regular",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 22,
        }
      }
      testID="tagbase-text"
    >
      0x1
    </Text>
  </View>
</View>
`;
